# SCorePilot

./: .gitignore  .replit  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-download-genera-1731037979570.txt  Pasted-from-flask-import-Flask-request-send-file-render-template-string-from-music21-import-converter-e-1731037693246.txt  README.md  app.py  configure_music21.py  file_manager.py  harmony-checker.py  harmony_checker.py  main.py  pyproject.toml  replit.nix  requirements.txt  score_visualizer.py  session_manager.py
harmony_checker/: __init__.py  analyzer.py  error_types.py  midi_handler.py  music_generator.py  report_generator.py  utils.py  visualization.py
static/css/: style.css
static/js/: main.js
static/visualizations/: generated_music.musicxml  generated_music_score.musicxml  score_15d7c447-7d53-4f67-82e0-736340267381.musicxml  score_4120a8df-f91d-41e7-8bdb-88337a3f3df8.musicxml  score_4d231aed-6f46-48ab-be4b-e522375d1156.musicxml  score_65f216ca-38fb-4b59-8fd7-d144c9668d4c.musicxml  score_9b7fadb6-936f-4c2e-874b-72d0e51281d6.musicxml  score_9dcc39eb-8112-4ab8-9133-1817a6829f13.musicxml  score_b42ffee5-ab32-4273-89be-80a66001f1f7.musicxml  score_cde6d091-b716-4204-87cf-1967e1ced926.musicxml  score_cde6d091-b716-4204-87cf-1967e1ced926.png.txt  score_cde6d091-b716-4204-87cf-1967e1ced926.png.xml  score_eee93fbc-a012-40f3-abae-07f2f9ae9011.musicxml  (+2 more)
templates/: base.html  index.html  results.html  test_visualization.html
tmp/: generated_music.mid  generated_music.musicxml  generated_music_score.musicxml
